# cliroy

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: docker-build.yml  docker-push.yml  docker.yml  docs.yml  draft.yml  pypi.yml  registry.yml  test-docker.yml  test-multiplatform.yml  test.yml
cliroy/: README.md  config.yaml  pyproject.toml
cliroy/docs/: mkdocs.yml
cliroy/docs/docs/: index.md
cliroy/docs/docs/usage/: cli.md
cliroy/src/cliroy/: __init__.py  __main__.py
cliroy/tests/functional/: test_cliroy.py
search/: search_index.json
usage/: index.html
