# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "cliroy"
version = "0.1.0"
description = "kilroy cli 💻"
readme = "cliroy/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/cliroy"
documentation = "https://kilroybot.github.io/cliroy"
packages = [{ include = "cliroy", from = "cliroy/src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = { version = "^0.4", extras = ["all"] }

# dev

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest"]
test = ["pytest"]
[tool.poetry.scripts]
# cli entry point
cliroy = "cliroy.__main__:cli"

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
